style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    /* border: 1px solid black; */
}
.center{
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50% );
    position: absolute;
}
body{
    margin: 0 20px;
    background-color: #45b7b8;
    box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.5);
}
p{
    font-family: 'Open Sans', sans-serif;
}
a{
    text-decoration: navajowhite;
}
.container-1{
    height: 100vh;
    margin: 0 20px;
    background-color: #45b7b8;
    box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.5);
    overflow: hidden;
}
header{
    position: relative;

    height: 50px;
    line-height: 50px;
    background-color: #fff;
    display: flex;
    align-items: center;
    padding-left: 10px;
}

header a{
    color: #000;
}
header li{
    list-style-type: none;
}
.nav{
    height: 30px;
    display: flex;
    align-items: center;
    justify-content: center;
    vertical-align: middle;
    border: 1px solid #000;
}
li{
    position: relative;
}
.main_list .listings .child_ul{
    position: absolute;
    width: 200px;
    z-index: -8;
    left: -200px;
    top: 0;
    transition: left 3s;
}
.main_list .listings:hover ul{
    left: 200px;
}

.nav .main_list{
    width: 200px;
    top: 0;
    height: 100vh;
    position: absolute;
    left: -200px;
    transition: left .256s;
    background-color: #45b7b8;
    box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.5);
    z-index: 1;
}
.nav:hover .main_list{
    display: list-item;
    left: 0;
}
.hamburger{
    position: relative;
    width: 40px;
    height: 2px;
    background-color: #f00;
}

.hamburger::before, .hamburger::after{
    content: "";
    width: 15px;
    height: 2px;
    position: absolute;
    background-color: #f00;
}
.hamburger::before{
    top: 5px;
}
.hamburger::after{
    bottom: 5px;
}

.main_list a{
    width: 100%;
    display: inline-block;
    padding: 0 20px;
    border: 1px solid #fff;
}

.img-container{
    position: relative;
    height: 50vh;
}
.img-container h2,
.img-container p{
    text-align: center;
    color: #fff;
}
.img-container .img{
    bottom: 0;
    left: 50%;
    transform: translate(-50%, 0);
    position: absolute;
    background-image: url("./img/naomi_who.jpg");
    width: 200px;
    height: 200px;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: 40% 50%;
    border-radius: 50%;
    box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.5);
    border: 5px solid white;
}
.overlay{
    height: 100%;
    background-color: rgba(0, 0, 0, .5);
    border-radius: 50%;
}
.name-section{
    margin-top: 10px;
    text-align: center;
}
.name-section h2,
.name-section p{
    margin-top: 5px;
    text-align: center;
}
.name-section a{
    display: inline-block;
    margin-top: 5px;
}
.name{
    font-family: 'Sacramento', cursive;
    font-size: 40px;
    font-weight: 200;
}
a button{
    color: #000;
    font-weight: 500;
    border: none;
    padding: 20px;
    width: 200px;
    border: 1px solid #45b7b8;
    border-radius: 5px;
    background-color: #fff;
    background-color: transparent;
    position: relative;
    font-size: 14px;
    border: 1px solid white;
}
a button:active{
    box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.5);
    transform: translateY(4px);
    border: 5px inset #45b7b8;
}
button svg{
    position: absolute;
    right: 20px;
    top: 50%;
    opacity: 0;
    transform: translate(0, -50%);
    transition: opacity, right, 0.5s;
}
button:hover{
    cursor: pointer;
    box-shadow: 0px 6px 10px 0px rgba(0,0,0,0.5);
    color: white;
}
button:hover svg{
    opacity: 1;
    right: 30px;
}

